<resources>
    <string name="app_name">V2uid</string>

    <string name="about_github_link">Tuuure/v2uid</string>
    <string name="about_thanks">使用或参考了以下开源项目的源码</string>
    <string name="about_thanks_2dust">2dust/androidpackagenamelist</string>
    <string name="about_thanks_sirpryderi">SirPryderi/OpenHostsEditor</string>

    <string name="menu_item_search">搜索</string>
    <string name="menu_item_save">保存</string>
    <string name="menu_item_clear">清空</string>
    <string name="menu_item_bypass">绕行模式</string>
    <string name="menu_item_select_proxy_app">自动选中需代理应用</string>
    <string name="menu_item_about">关于</string>

    <string name="action_retry">重试</string>
    <string name="msg_missing_root">未检测到Root环境</string>
    <string name="msg_saveing">正在保存....</string>
    <string name="msg_save_success">保存成功</string>
    <string name="msg_downloading_content">正在下载内容</string>
    <string name="msg_select_app">已选中需代理应用</string>
    <string name="msg_loading">正在载入....</string>
    <string name="msg_connect_failed">连接失败</string>
</resources>