<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_item_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/menu_item_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bypass"
        android:checkable="true"
        android:title="@string/menu_item_bypass"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_proxy_app"
        android:title="@string/menu_item_select_proxy_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/menu_item_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_item_about"
        app:showAsAction="never" />

</menu>